fix create-topic button alignment on gte_laptop screen resolutions

--- a/app/assets/stylesheets/pages/p-dashboards/show_v2.sass
+++ b/app/assets/stylesheets/pages/p-dashboards/show_v2.sass
@@ -273,6 +273,9 @@
         font-size: 12px
         padding-right: 6px
 
+    +gte_laptop
+      margin-top: 2px
+
   .news_wall
     +fcolumn-responsive($ipad-columns: 2, $laptop-columns: 3, $offset-mobile: 40px, $offset-desktop: 48px, $selector: '.b-news_wall-topic, .b-postloader')
 
